prover-ray/zkcdriver/testdata/synced/invalid/const_08.zkc
//error:2:16-17:unexpected token
const dummy:u16;
